# Bus-Stop-Queue-DES

./: .gitignore  GILL.py  README.md  build.zig.zon
.github/workflows/: ci.yml
assigment1/: admep.md  main.py  pyproject.toml  simulation_comparisons.csv  simulation_metrics.csv  tries.txt
assigment1/report/: bibliography.bib  report.typ
assigment1/results/: estimates-alpha1.0-beta0.5.csv  estimates-alpha1.0-beta1.0.csv  estimates-alpha1.0-beta3.0.csv  estimates-alpha2.0-beta1.0.csv  estimates-alpha2.0-beta3.0.csv  estimates-alpha3.0-beta0.5.csv  estimates-alpha3.0-beta1.0.csv  estimates-alpha3.0-beta3.0.csv  estimates.txt  sim-2.0-2.0.csv  sim-2.0-2.5.csv  sim-3.0-1.5.csv  sim-alpha1.0-beta1.5.csv  sim-alpha1.0-beta2.0.csv  sim-alpha1.0-beta2.5.csv  tables.txt  tries.txt  (+12 more)
assignment2_preentrega/: mm1-es-example.py
assignment2_preentrega/lib/: README.md  build.zig  pyproject.toml
assignment2_preentrega/lib/event_scheduling_bus/: __init__.py  _lib.pyi  domain.py  simulations.py
assignment2_preentrega/lib/src/: config.zig  lib.zig  main.zig  mm1.zig  mmx1k.zig  multiheap.zig  structheap.zig
bootstrap/: ecdf.py
hipotesis_testing/: FactorialAnova2factorv2ENGSTUDENT.Rmd  ICcomparisonStudent.Rmd  casestudy1.csv  casestudy3.csv  neyman-pearson.html  neyman-pearson.py  permutation_tests.html  permutation_tests.py  resampling_case_studies.md
input_params/: mmx1k.json
random_num_generation/: RandomGenerationR.Rmd  Rbenchmark.R  parameters.txt  rng  rng.zig  rng_vectorized  rng_vectorized.zig
src/: config.zig  input.zig  multiheap.zig
test_lib/: pyproject.toml
(+92 files in other folders)
