[build-system]
requires = ["poetry-core", "ziggy-pydust>=0.26.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "event_scheduling_bus"
version = "0.1.0"
description = ""
authors = ["Arnau Perez Reverte", "Pau Soler Valades"]
readme = "README.md"
packages = [{ include = "event_scheduling_bus" }]
include = [
    { path = "src/", format = "sdist" },
    { path = "event_scheduling_bus/*.so", format = "wheel" },
    "event_scheduling_bus/*.pyi"
]

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ziggy-pydust = "0.26.0"
pytest = "9.0.2"
ruff = "^0.14.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "UP", "I001", "I002"]

[[tool.pydust.ext_module]]
name = "event_scheduling_bus"
root = "src/lib.zig"
